--- a/ipa.plist
+++ b/ipa.plist
@@ -10,7 +10,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>https://v2ss.github.io/shadowrocket/Shadowrocket.ipa</string>
+                        <string>https://v2ray-1257729714.cos.ap-chengdu.myqcloud.com/shadowrocket/Shadowrocket.ipa</string>
                     </dict>
                 </array>
                 <key>metadata</key>
